@startuml ClassDiagram_RenGo_Updated

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle

title Ren&Go - Updated Class Diagram

class User {
  +_id: ObjectId
  +name: String
  +email: String
  +phone: String
  +password: String
  +role: String {CLIENT|PROPRIETAIRE|ADMIN}
  +isActive: Boolean
  +isVerified: Boolean
  +verificationToken: String
  +verificationTokenExpires: Date
  +createdAt: Date
  +updatedAt: Date
}

class Property {
  +_id: ObjectId
  +titre: String
  +description: String
  +prix: Number
  +localisation.gouvernorat: String
  +localisation.delegation: String
  +images: String[]
  +bedrooms: Number
  +bathrooms: Number
  +maxGuests: Number
  +type: String {MAISON|MAISON_DHOTES|VILLA|APPARTEMENT|COTTAGE}
  +cancellationDelay: Number {24|48}
  +owner: ObjectId
  +isActive: Boolean
  +createdAt: Date
  +updatedAt: Date
}

class Reservation {
  +_id: ObjectId
  +property: ObjectId
  +client: ObjectId
  +dateDebut: Date
  +dateFin: Date
  +guests: Number
  +totalPrice: Number
  +status: String {EN_ATTENTE|CONFIRMEE|ANNULEE}
  +paymentMethod: String {CASH|ONLINE}
  +createdAt: Date
  +updatedAt: Date
}

class Payment {
  +_id: ObjectId
  +reservation: ObjectId
  +client: ObjectId
  +amount: Number
  +method: String {CASH|ONLINE}
  +status: String {SUCCESS|FAILED}
  +commissionAmount: Number
  +netAmount: Number
  +createdAt: Date
  +updatedAt: Date
}

class Review {
  +_id: ObjectId
  +reservation: ObjectId (unique)
  +reviewer: ObjectId
  +property: ObjectId
  +rating: Number (1..5)
  +comment: String
  +createdAt: Date
  +updatedAt: Date
}

class Wishlist {
  +_id: ObjectId
  +user: ObjectId (unique)
  +properties: ObjectId[]
  +createdAt: Date
  +updatedAt: Date
}

class Notification {
  +_id: ObjectId
  +user: ObjectId
  +type: String {RESERVATION|PAYMENT|REVIEW|SYSTEM}
  +message: String
  +isRead: Boolean
  +relatedId: ObjectId?
  +relatedModel: String? {Reservation|Payment|Review|Property}
  +createdAt: Date
  +updatedAt: Date
}

class Message {
  +_id: ObjectId
  +sender: ObjectId
  +receiver: ObjectId
  +reservation: ObjectId?
  +content: String (max 1000)
  +isRead: Boolean
  +createdAt: Date
  +updatedAt: Date
}

User "1" --> "0..*" Property : owns
User "1" --> "0..*" Reservation : books
Property "1" --> "0..*" Reservation : receives

Reservation "1" --> "0..*" Payment : payments
Reservation "1" --> "0..1" Review : review
Property "1" --> "0..*" Review : reviewed on
User "1" --> "0..*" Review : writes

User "1" --> "0..1" Wishlist : has
Wishlist "1" --> "0..*" Property : contains

User "1" --> "0..*" Notification : receives
Notification "0..*" ..> Reservation : relatedId
Notification "0..*" ..> Payment : relatedId
Notification "0..*" ..> Review : relatedId
Notification "0..*" ..> Property : relatedId

User "1" --> "0..*" Message : sender
User "1" --> "0..*" Message : receiver
Reservation "1" --> "0..*" Message : context

@enduml
